--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: yellow;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,5 +18,5 @@
 }
 
 .App-link {
-  color: #09d3ac;
+  color: var(--accent);
 }
