--- a/src/pages/Welcome/welcomeStyles.css
+++ b/src/pages/Welcome/welcomeStyles.css
@@ -6,6 +6,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  padding: 3.5em;
   border-radius: 12px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1), 0px 4px 8px rgba(0, 0, 0, 0.08),
     0px 1px 12px rgba(0, 0, 0, 0.04);
