--- a/src/pages/Welcome/welcomeStyles.css
+++ b/src/pages/Welcome/welcomeStyles.css
@@ -10,4 +10,7 @@
   border-radius: 12px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1), 0px 4px 8px rgba(0, 0, 0, 0.08),
     0px 1px 12px rgba(0, 0, 0, 0.04);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
