--- a/src/pages/Welcome/welcomeStyles.css
+++ b/src/pages/Welcome/welcomeStyles.css
@@ -16,3 +16,17 @@
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 400px) {
+  .largeLogo {
+    width: 90%;
+  }
+  .welcomeScreen {
+    padding: 0;
+    height: 75vh;
+  }
+}
+
+.smallLogo {
+  width: 50%;
+}
